--- a/html_proto/src/components/MainPage.scss
+++ b/html_proto/src/components/MainPage.scss
@@ -81,8 +81,9 @@ $card-padding: 15px;
         background: none;
         background-color: transparent;
         border-top: none;
-        padding: 0;
+        padding: 5px;
       }      
     }
   }
 }
+
