--- a/html_proto/src/components/NewPost.scss
+++ b/html_proto/src/components/NewPost.scss
@@ -3,6 +3,12 @@
     min-height: 100vh;
     padding: 2rem;
     position: relative;
+
+    @media (max-width: 576px) {
+      padding-top: 0.5rem;
+      overflow: hidden;
+      height: 100vh;
+    }
   
     .back-arrow {
       font-size: 2rem;
@@ -17,6 +23,8 @@
     }
   
     .post-card {
+      max-height: 100%;
+      overflow-y: auto;
       max-width: 600px;
       margin: 0 auto;
       padding: 2rem;
@@ -37,6 +45,4 @@
         margin-top: 1rem;
       }
     }
-    
   }
-  
