--- a/html_proto/src/components/Navbar.scss
+++ b/html_proto/src/components/Navbar.scss
@@ -1,14 +1,21 @@
-.navbar .navbar-toggler {
-  border-color: transparent;
+.navbar-light .container {
+  display: flex;
+  align-items: center; // vertically center brand + toggle
+  justify-content: space-between;
+}
 
-  .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(30,30,30,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-  }
+.navbar .navbar-brand {
+  font-family: "Borel", cursive;
+  font-size: 40px;
+  padding: 0;
+  margin: 0;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+}
 
-  margin-left: 10px;
-  margin-right: 10px;
-  padding-left: 5px;
-  padding-right: 5px;
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0,0,0,1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22' /%3e%3c/svg%3e") !important;
 }
 
 .navbar-collapse {
