--- a/html_proto/src/components/BottomToolbar.scss
+++ b/html_proto/src/components/BottomToolbar.scss
@@ -11,7 +11,7 @@
   padding: 0.5rem 0;
   z-index: 999;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.05);
-  height: 70px; // enough space to support floating button visually
+  height: 70px;
 }
 
 .toolbar-button {
