--- a/html_proto/src/components/style_guide.scss
+++ b/html_proto/src/components/style_guide.scss
@@ -1,10 +1,63 @@
 
-  .comment-section {
+.psot-card {
+  cursor: pointer;
+}
+
+.text-muted {
+  font-size: "0.9rem";
+}
+
+.comment-section {
     background-color: #DBE7F0;
     padding: 20px;
     border-radius: 1rem;
     min-height: 300px;
   }
+
+.color-swatch {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.375rem; // bootstrap's rounded
+}
+
+.bg-light-blue {
+  background-color: #DBE7F0;
+}
+
+.post-card-img {
+  height: 100%;
+}
+
+.main-profile-pic {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+
+.card-img-fit {
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.comment-box {
+  background-color: #f8f9fa;
+  padding: 0.75rem;
+  border-radius: 0.375rem;
+}
+
+.comment-section {
+  background-color: #DBE7F0;
+  padding: 20px;
+  border-radius: 1rem;
+  min-height: 300px;
+}
+
+.page-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 
   
   
